Update git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ dev/tiddlers/$__config_anythingllm_apikey.tid
 dev/tiddlers/$__Import.tid
 cache/
 dev/tiddlers/$__config*
+dev/tiddlers/$__StoryList_*.tid
